--- a/app/views/shareds/_email_share.html.erb
+++ b/app/views/shareds/_email_share.html.erb
@@ -20,7 +20,7 @@
 					<div class="padding-txt-6">Undang teman untuk bergabung</div>
 				</div>
 				<div class="col-md-3">
-					<input type="text" name="" class="form-control">
+					<input type="text" name="" class="form-control" placeholder="Email anda">
 				</div>
 				<div class="col-xs-1">
 					<div class="btn-sent-footer">
@@ -31,17 +31,17 @@
 					<div class="padding-txt-6">atau share ke</div>
 				</div>
 				<div class="col-md-2">
-					<a href=""><button class="btn btn-facebook">
+					<a href=""><button class="btn btn-primary">
 						<span class="fa fa-facebook"></span>
 					</button>
 				</a>
 				<a href="">
-					<button class="btn btn-twitter">
+					<button class="btn btn-info">
 						<span class="fa fa-twitter"></span>
 					</button>
 				</a>
 				<a href="">
-					<button class="btn btn-google">
+					<button class="btn btn-danger">
 						<span class="fa fa-google-plus-square"></span>
 					</button>
 				</a>
