--- a/app/views/shareds/_footer.html.erb
+++ b/app/views/shareds/_footer.html.erb
@@ -4,16 +4,26 @@
 		<div class="row">
 			<div class="footer-bottom-design">
 				<div class="col-xs-12 col-sm-3">
-					<div class="text-list-footer">ABOUT US</div>
+					<div class="text-list-footer">BANTUAN & DUKUNGAN</div>
+					<div class="br20"></div>
+					<div class="brd-btm-greey"></div>
 					<div class="br10"></div>
 					<ul>
 						<li>
-							SukabumiProperty merupakan portal situs jual beli property bekas dan baru di Kota dan Kabupaten Sukabumi. jual property anda di SukabuProperty.com
+							Ahli kami akan membantu menjawab pertanyaan, menyelesaikan masalah, dan meningkatkan pengalaman Anda.
+							<div class="br10"></div>
+							<a href="">
+								<button class="btn btn-primary btn-block no-border">
+									<i class="fa fa-mail-forward"></i>  Contact Us
+								</button>
+							</a>
 						</li>
 					</ul>
 				</div>
 				<div class="col-xs-12 col-sm-3">
 					<div class="text-list-footer">BELI PROPERTY</div>
+					<div class="br20"></div>
+					<div class="brd-btm-greey"></div>
 					<div class="br10"></div>
 					<ul>
 						<li>Property baru untuk dijual</li>
@@ -24,6 +34,8 @@
 				</div>
 				<div class="col-xs-12 col-sm-3">
 					<div class="text-list-footer">JUAL PROPERTY</div>
+					<div class="br20"></div>
+					<div class="brd-btm-greey"></div>
 					<div class="br10"></div>
 					<ul>
 						<li>Verifikasi Property anda</li>
@@ -33,6 +45,8 @@
 				</div>
 				<div class="col-xs-12 col-sm-3">
 					<div class="text-list-footer">PELAYANAN PELANGGAN</div>
+					<div class="br20"></div>
+					<div class="brd-btm-greey"></div>
 					<div class="br10"></div>
 					<ul>
 						<li>
