--- a/app/views/publics/catalog.html.erb
+++ b/app/views/publics/catalog.html.erb
@@ -205,7 +205,7 @@
 										<span>1 Menit yang lalu</span>
 									</div>
 									<div class="col-md-3">
-										<%= image_tag 'berita4.jpg', alt: 'Gambar', class: 'img-thumbnail' %>
+										<%= image_tag 'noimage.jpg', alt: 'Gambar', class: 'img-thumbnail' %>
 									</div>
 									<div class="col-md-4">
 										<div class="description-catalog-center"> 
@@ -238,7 +238,7 @@
 										<span>3 Menit yang lalu</span>
 									</div>
 									<div class="col-md-3">
-										<%= image_tag 'berita4.jpg', alt: 'Gambar', class: 'img-thumbnail' %>
+										<%= image_tag 'noimage.jpg', alt: 'Gambar', class: 'img-thumbnail' %>
 									</div>
 									<div class="col-md-4">
 										<div class="description-catalog-center"> 
@@ -271,7 +271,7 @@
 										<span>4 Menit yang lalu</span>
 									</div>
 									<div class="col-md-3">
-										<%= image_tag 'berita4.jpg', alt: 'Gambar', class: 'img-thumbnail' %>
+										<%= image_tag 'noimage.jpg', alt: 'Gambar', class: 'img-thumbnail' %>
 									</div>
 									<div class="col-md-4">
 										<div class="description-catalog-center"> 
