--- a/app/views/backend/products/_form.html.erb
+++ b/app/views/backend/products/_form.html.erb
@@ -56,14 +56,16 @@
 					<div class="panel-heading">Product Details</div>
 					<div class="panel-body">
 						<%= f.fields_for(:product_property) do |product_property| %>
-							<%= render partial: 'product_property_form', locals: {product_property: product_property} %>
+							<%= render partial: 'product_property_form', locals: {f: product_property} %>
 						<% end %>
 					</div>
 				</div>
 				<div class="panel panel-default">
 					<div class="panel-heading">Address Details</div>
 					<div class="panel-body">
-						render address
+						<%= f.fields_for(:address) do |address| %>
+							<%= render partial: 'form_address', locals: {address: address} %>
+						<% end %>
 					</div>
 				</div>
 				<div class="panel panel-default">
