--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -49,7 +49,7 @@
 						</li>
 					</ul>
 				</li>
-				<!-- <li class="sidebar-header">
+				<li class="sidebar-header">
 					<span class="sidebar-header-title">PRODUCTS</span>
 				</li>
 				<li>
@@ -89,7 +89,7 @@
 							<% end %>
 						</li>
 					</ul>
-				</li> -->
+				</li>
 				<li class="sidebar-header">
 					<span class="sidebar-header-title">ELEKTRONIK & GADGET</span>
 				</li>
