revision property product

--- a/app/views/backend/products/_form.html.erb
+++ b/app/views/backend/products/_form.html.erb
@@ -53,7 +53,7 @@
 					</div>
 				</div>
 				<div class="panel panel-default">
-					<div class="panel-heading">Product Details</div>
+					<div class="panel-heading">Property Details</div>
 					<div class="panel-body">
 						<%= f.fields_for(:product_property) do |product_property| %>
 							<%= render partial: 'product_property_form', locals: { product_property: product_property } %>
