add_feature_car

--- a/app/views/backend/products/_form.html.erb
+++ b/app/views/backend/products/_form.html.erb
@@ -61,6 +61,14 @@
 					</div>
 				</div>
 				<div class="panel panel-default">
+					<div class="panel-heading">Car Detail</div>
+					<div class="panel-body">
+						<%= f.fields_for(:car) do |product_car| %>
+							<%= render partial: 'product_car', locals: { product_car: product_car } %>
+						<% end %>
+					</div>
+				</div>
+				<div class="panel panel-default">
 					<div class="panel-heading">Address Details</div>
 					<div class="panel-body">
 						<%= f.fields_for(:address) do |address| %>
