--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -145,12 +145,12 @@
 					</a>
 					<ul>
 						<li>
-							<%= link_to new_backend_product_path do %>
+							<%= link_to new_backend_car_path do %>
 							New data
 							<% end %>
 						</li>
 						<li>
-							<%= link_to backend_products_path do %>
+							<%= link_to backend_cars_path do %>
 							List data
 							<% end %>
 						</li>
