revision breadcumbs UI

--- a/app/views/backend/products/index.html.erb
+++ b/app/views/backend/products/index.html.erb
@@ -1,4 +1,5 @@
 <div id="page-content">
+	<%= render 'backend/shared/title_top' %>
 	<div class="block full">
 		<div class="block-title">
 			<div class="block-options pull-right">
