--- a/app/views/backend/shared/_title_top.html.erb
+++ b/app/views/backend/shared/_title_top.html.erb
@@ -1,11 +1,11 @@
-<div class="content-header">
+<!-- <div class="content-header">
   <div class="header-section">
     <h1>
       New Data<br>
     </h1>
   </div>
-</div>
+</div> -->
+
 <ul class="breadcrumb breadcrumb-top">
-	<li><%= link_to "Dashboard", backend_path %></li>
-	<li><a href="#">title</a></li>
+	<%= render_breadcrumbs :tag => :li, :separator => "" %>
 </ul>
