--- a/app/assets/stylesheets/backend/plugins-3.0.css
+++ b/app/assets/stylesheets/backend/plugins-3.0.css
@@ -6482,7 +6482,7 @@
 	display:block;
 	width:12px;
 	height:12px;
-	background:url(chosen-sprite.png) -42px 1px no-repeat;
+	background:url(../chosen-sprite.png) -42px 1px no-repeat;
 	font-size:1px
 }
 .chosen-container-single .chosen-single abbr:hover,.chosen-container-single.chosen-disabled .chosen-single abbr:hover
@@ -6504,7 +6504,7 @@
 	margin-top:6px;
 	width:100%;
 	height:100%;
-	background:url(chosen-sprite.png) 0 2px no-repeat
+	background:url(../chosen-sprite.png) 0 2px no-repeat
 }
 .chosen-container-single .chosen-search
 {
@@ -6522,7 +6522,7 @@
 	height:auto;
 	outline:0;
 	border:1px solid #dbe1e8;
-	background:url(chosen-sprite.png) 100% -20px no-repeat #fff;
+	background:url(../chosen-sprite.png) 100% -20px no-repeat #fff;
 	border-radius:4px;
 	font-size:1em;
 	line-height:normal
@@ -6800,8 +6800,8 @@
 .chosen-rtl .chosen-search input[type=text]
 {
 	padding:4px 5px 4px 20px;
-	background:url(chosen-sprite.png) -30px -20px no-repeat #fff;
-	background:url(chosen-sprite.png) -30px -20px no-repeat,linear-gradient(#eee 1%,#fff 15%);
+	background:url(../chosen-sprite.png) -30px -20px no-repeat #fff;
+	background:url(../chosen-sprite.png) -30px -20px no-repeat,linear-gradient(#eee 1%,#fff 15%);
 	direction:rtl
 }
 .chosen-rtl.chosen-container-single .chosen-single div b
