--- a/app/views/backend/products/_product_bike_form.html.erb
+++ b/app/views/backend/products/_product_bike_form.html.erb
@@ -28,3 +28,35 @@
 		<%= bike_property.text_field :color, class: 'form-control', placeholder: 'color' %>
 	</div>
 </div>
+<div class="form-group">
+<label class="col-md-4 control-label" for="example-chosen">Production Year</label>
+	<div class="col-md-6">
+		<%= bike_property.select :production_year, (1945..Time.now.year).to_a, {include_blank: 'Production Year'}, class: 'select-chosen', id: 'example-chosen'  %>              
+	</div>
+</div>
+<div class="form-group">
+<label class="col-md-4 control-label" for="example-chosen">Transmission</label>
+	<div class="col-md-6">
+		<%= bike_property.select :transmission, options_for_select(transmission,nil), {include_blank: 'transmission'}, class: 'select-chosen', id: 'example-chosen'  %>              
+	</div>
+</div>
+<div class="form-group">
+<label class="col-md-4 control-label" for="example-chosen">Full Tank</label>
+	<div class="col-md-6">
+		<%= bike_property.select :full_tank, options_for_select(fulltank,nil), {include_blank: 'full tank'}, class: 'select-chosen', id: 'example-chosen'  %>              
+	</div>
+</div>
+<div class="form-group">
+	<label class="col-md-4 control-label" for="example-chosen">Kilometer</label>
+	<div class="col-md-6">
+		<%= bike_property.text_field :kilometer, class: 'form-control', placeholder: 'kilometer' %>
+	</div>
+</div>
+<div class="form-group">
+	<label class="col-md-4 control-label" for="example-chosen">Number Plate</label>
+	<div class="col-md-6">
+		<%= bike_property.text_field :number_plate, class: 'form-control', placeholder: 'number plate' %>
+	</div>
+</div>
+
+
