--- a/app/views/backend/products/_product_car.html.erb
+++ b/app/views/backend/products/_product_car.html.erb
@@ -37,6 +37,12 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="col-md-4 control-label" for="example-chosen">Color</label>
+            <div class="col-md-6">
+                <%= product_car.text_field :color, class: 'form-control', placeholder: 'Color' %>
+            </div>
+        </div>
+        <div class="form-group">
             <label class="col-md-4 control-label" for="example-chosen">Engine</label>
             <div class="col-md-6">
                 <%= product_car.select :engine, options_for_select(engine, nil), {include_blank: 'Choose Engine'}, class: 'select-chosen', id: 'example-chosen'  %>
