--- a/app/views/backend/products/_product_gadget_form.html.erb
+++ b/app/views/backend/products/_product_gadget_form.html.erb
@@ -19,7 +19,7 @@
 <div class="form-group">
 	<label class="col-md-4 control-label" for="example-chosen">color</label>
 	<div class="col-md-6">
-		<%= gadget.text_field :color, class: 'form-control', placeholder: 'color' %>
+		<%= gadget.select :color, options_for_select(color, nil), {include_blank: 'Color'}, class: 'select-chosen', id: 'example-chosen'  %>              
 	</div>
 </div>
 <div class="form-group">
@@ -37,7 +37,7 @@
 <div class="form-group">
 	<label class="col-md-4 control-label" for="example-chosen">Sim</label>
 	<div class="col-md-6">
-		<%= gadget.text_field :sim, class: 'form-control' %>
+		<%= gadget.select :color, options_for_select(sim, nil), {include_blank: 'sim'}, class: 'select-chosen', id: 'example-chosen'  %>              
 	</div>
 </div>
 <div class="form-group">
@@ -49,8 +49,8 @@
 <div class="form-group">
 	<label class="col-md-4 control-label" for="example-chosen">Camera</label>
 	<div class="col-md-6">
-		<%= gadget.text_field :camera, class: 'form-control' %>
-	</div>	
+		<%= gadget.select :camera, options_for_select(camera, nil), {include_blank: 'Camera'}, class: 'form-control', id: 'example-chosen'  %>              
+	</div>
 </div>
 <div class="form-group">
 	<label class="col-md-4 control-label" for="example-chosen">Dimension</label>
