--- a/app/views/backend/products/_product_bike_form.html.erb
+++ b/app/views/backend/products/_product_bike_form.html.erb
@@ -25,7 +25,7 @@
 <div class="form-group">
 	<label class="col-md-4 control-label" for="example-chosen">color</label>
 	<div class="col-md-6">
-		<%= bike_property.text_field :color, class: 'form-control', placeholder: 'color' %>
+		<%= bike_property.select :color, options_for_select(color, nil), {include_blank: 'Color'}, class: 'select-chosen', id: 'example-chosen'  %>              
 	</div>
 </div>
 <div class="form-group">
