--- a/app/views/backend/products/_product_car.html.erb
+++ b/app/views/backend/products/_product_car.html.erb
@@ -39,7 +39,7 @@
         <div class="form-group">
             <label class="col-md-4 control-label" for="example-chosen">Color</label>
             <div class="col-md-6">
-                <%= product_car.text_field :color, class: 'form-control', placeholder: 'Color' %>
+                <%= product_car.select :color, options_for_select(color, nil), {include_blank: 'Color'}, class: 'select-chosen', id: 'example-chosen'  %>              
             </div>
         </div>
         <div class="form-group">
