--- a/app/views/home/_ads_hot.html.erb
+++ b/app/views/home/_ads_hot.html.erb
@@ -15,7 +15,7 @@
 			</div>
 			<div id="carousel1" class="carousel carousel_catalog slide hidden-xs" data-ride="carousel">
 				<div class="carousel-inner">
-					<% @products.each do |p|  %>
+					<% @hot_ads.each do |p|  %>
 						<div class="cata-item col-sm-3">
 							<div class="col-item">
 								<div class="photo">
