--- a/app/views/shareds/_carousel_top.html.erb
+++ b/app/views/shareds/_carousel_top.html.erb
@@ -32,7 +32,7 @@
 									<h3>CARI BARANG DISINI!</h3>
 								</div>
 								<div class="br10"></div>
-								<%= form_for :search, method: 'get', url: catalog_path do |f| %>
+								<%= form_for :search, method: 'get', url: results_path do |f| %>
 									<div class="search-input-top-index1">
 										<div class="col-md-12">
 											<label class="label-search-carousel">Lokasi</label>
@@ -43,13 +43,7 @@
 									<div class="search-input-top-index">
 										<div class="col-md-6">
 											<label class="label-search-carousel">Type Property</label>
-											<select class="form-control chosen-select" tabindex="2">
-												<option value="">Jenis Property ...</option>
-												<option value="Rumah">Rumah</option>
-												<option value="Kontrakan">Kontrakan</option>
-												<option value="Tanah">Tanah</option>
-												<option value="Apartemen">Apartemen</option>
-											</select>
+											<%= select_tag :catalog_type, options_for_select(catalog_type, nil), prompt: 'Catalog type', class: 'form-control select-chosen' %>
 										</div>
 										<div class="col-md-6">
 											<label class="label-search-carousel">Kondisi</label>
