--- a/app/views/backend/provinces/_form.html.erb
+++ b/app/views/backend/provinces/_form.html.erb
@@ -4,10 +4,10 @@
 		<div class="block-title">
 			<div class="block-options pull-right">
 				<%= link_to backend_provinces_path, class: "btn btn-alt btn-sm btn-default toggle-bordered" do %>
-				List Province
+				List Location
 				<% end %>
 			</div>
-			<h2><strong>Province</strong> New</h2>
+			<h2><strong>Location</strong> New</h2>
 		</div>
 		<%= form_for [:backend, @province], :html => {:class => "form-horizontal form-bordered"} do |f| %>
 		<fieldset>
