--- a/app/views/backend/provinces/index.html.erb
+++ b/app/views/backend/provinces/index.html.erb
@@ -8,7 +8,7 @@
 					</div>
 				<% end %>
 			</div>
-			<h2><strong>Provinces</strong> lists</h2>
+			<h2><strong>Location</strong> lists</h2>
 		</div>
 		<div class="table-responsive">
 			<table id="example-datatable" class="table table-vcenter table-condensed table-bordered">
