--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -158,7 +158,7 @@
 					<a href="#" class="sidebar-nav-menu">
 						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
 						<i class="gi gi-google_maps sidebar-nav-icon"></i> 
-						<span class="sidebar-nav-mini-hide">Province</span>
+						<span class="sidebar-nav-mini-hide">Location</span>
 					</a>
 					<ul>
 						<li>
