--- a/app/views/home/_new_ads.html.erb
+++ b/app/views/home/_new_ads.html.erb
@@ -18,17 +18,17 @@
 				<div class="carousel-inner">
 					<div class="item active">
 						<div class="row">
-							<% (1..4).each do %>
+							<% @products.each do |p| %>
 								<div class="col-sm-3">
 									<div class="col-item">
 										<div class="photo">
-											<%= image_tag 'berita6.jpg', alt: 'Gambar', class: 'img-responsive' %>
+											<%= image_tag "#{p.galleries.first.file.url(:large)}", alt: 'Gambar', class: 'img-responsive' %>
 										</div>
 										<div class="info">
 											<div class="row">
 												<div class="price col-md-6">
-													<h5>Rumah Strawberry</h5>
-													<h5 class="price-text-color">Rp.10.200.000,-</h5>
+													<h5><% p.title %></h5>
+													<h5 class="price-text-color"><% p.price %></h5>
 												</div>
 												<div class="rating hidden-sm col-md-6">
 													<i class="price-text-color fa fa-star"></i>
@@ -54,47 +54,10 @@
 							<% end %>
 						</div>
 					</div>
-					<div class="item">
-						<div class="row">
-							<% (1..4).each do %>
-								<div class="col-sm-3">
-									<div class="col-item">
-										<div class="photo">
-											<%= image_tag 'berita6.jpg', alt: 'Gambar', class: 'img-responsive' %>
-										</div>
-										<div class="info">
-											<div class="row">
-												<div class="price col-md-6">
-													<h5>Perumahan Anggrek</h5>
-													<h5 class="price-text-color">Rp.10.200.000,-</h5>
-												</div>
-												<div class="rating hidden-sm col-md-6">
-													<i class="price-text-color fa fa-star"></i>
-													<i class="price-text-color fa fa-star"></i>
-													<i class="price-text-color fa fa-star"></i>
-													<i class="price-text-color fa fa-star"></i>
-
-												</div>
-											</div>
-											<div class="separator clear-left">
-												<p class="btn-add">
-
-													<a href="#" class="hidden-sm"><%= image_tag 'fair_deal.png', alt: 'Fair Deal Property' %></a>
-												</p>
-												<p class="btn-details">
-													<i class="fa fa-list"></i>
-													<a href="#" class="hidden-sm">Details</a>
-												</p>
-											</div>
-											<div class="clearfix"></div>
-										</div>
-									</div>
-								</div>
-							<% end %>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum eos obcaecati, molestiae cupiditate non atque corporis ipsam sapiente dolorem, veritatis minima eligendi beatae magni in. Ut assumenda consequatur debitis!
