--- a/app/views/backend/products/_form.html.erb
+++ b/app/views/backend/products/_form.html.erb
@@ -21,14 +21,14 @@
 								<%= f.check_box :status, class: 'form-control' %>
 							</div>
 						</div>
-						<div class="form-group">
+						<!-- <div class="form-group">
 							<label class="col-md-4 control-label" for="example-chosen">Category</label>
 							<div class="col-md-6">
 								<div class="input-group">
-									<%= f.select :category_id, options_for_select(products_category_options, @product.category_id),{prompt: 'Select Category...'}, class: 'form-control' %>
+									<%#= f.select :category_id, options_for_select(products_category_options, @product.category_id),{prompt: 'Select Category...'}, class: 'form-control' %>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<div class="form-group">
 							<label class="col-md-4 control-label" for="example-chosen">Title</label>
 							<div class="col-md-6">
