--- a/app/views/backend/products/_form_address.html.erb
+++ b/app/views/backend/products/_form_address.html.erb
@@ -1,19 +1,19 @@
 <div class="form-group">
 	<label class="col-md-4 control-label" for="example-chosen">Negara</label>
 	<div class="col-md-6">
-		<%= address.text_field :country, class: 'form-control' %>
+		<%= address.text_field :country, class: 'form-control', :value => 'Indonesia' %>
 	</div>
 </div>
 <div class="form-group">
 	<label class="col-md-4 control-label" for="example-chosen">Provinsi</label>
 	<div class="col-md-6">
-		<%= address.text_field :province, class: 'form-control' %>
+		<%= address.text_field :province, class: 'form-control', :value => 'Jawa Barat' %>
 	</div>
 </div>
 <div class="form-group">
 	<label class="col-md-4 control-label" for="example-chosen">Kota</label>
 	<div class="col-md-6">
-		<%= address.text_field :city, class: 'form-control' %>
+		<%= address.text_field :city, class: 'form-control', :value => 'Sukabumi' %>
 	</div>
 </div>
 <div class="form-group">
