--- a/app/views/home/_ads_hot.html.erb
+++ b/app/views/home/_ads_hot.html.erb
@@ -15,24 +15,23 @@
 			</div>
 			<div id="carousel1" class="carousel carousel_catalog slide hidden-xs" data-ride="carousel">
 				<div class="carousel-inner">
-					<% (1..8).each do %>
+					<% @products.each do |p|  %>
 						<div class="cata-item col-sm-3">
 							<div class="col-item">
 								<div class="photo">
-									<%= image_tag 'berita6.jpg', alt: 'Gambar', class: 'img-responsive' %>
+									<%= image_tag "#{p.galleries.first.file.url(:large)}", alt: 'Gambar', class: 'img-responsive' %>
 								</div>
 								<div class="info">
 									<div class="row">
 										<div class="price col-md-6">
-											<h5>Rumah Strawberry</h5>
-											<h5 class="price-text-color">Rp.10.200.000,-</h5>
+											<h5><%= p.title %></h5>
+											<h5 class="price-text-color">Rp. <%= p.price %></h5>
 										</div>
 										<div class="rating hidden-sm col-md-6">
 											<i class="price-text-color fa fa-star"></i>
 											<i class="price-text-color fa fa-star"></i>
 											<i class="price-text-color fa fa-star"></i>
 											<i class="price-text-color fa fa-star"></i>
-
 										</div>
 									</div>
 									<div class="separator clear-left">
